# online-clipboard

./: .env  .env.development  .gitignore  CONTRIBUTING.md  README.md  package.json  pyproject.toml  settings.py  test.py  vercel.json  wsgi.py
.github/workflows/: autotag.yml
app/: __init__.py  config.py  factory.py  note_const.py  utils.py
app/models/: __init__.py  base.py  database.py  datastore.py
app/resources/: __init__.py  base.py  example.py  note.py
app/views/: __init__.py  api.py  frontend.py  view_api.py
frontend/: .eslintrc.js  .gitignore  eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.js  vite.config.mts  vite.config.ts
frontend/public/: manifest.json  robots.txt  web.config
frontend/src/: App.vue  api.js  api.ts  config.js  config.ts  crypto.ts  main.ts  utils.js  utils.ts
frontend/src/components/: AppBarHomeButton.vue  Intro.vue  SidebarDelimLine.vue
frontend/src/locales/: datetime.js  datetime.ts  en.json  en.yml  zh-CN.json  zh-CN.toml
migrations/: env.py
migrations/versions/: 166bd8cea25b_.py  870347714aa8_.py  8cb40c637de8_.py
server/: .gitignore  pyproject.toml  wsgi.py
server/app/: __init__.py  config.py  factory.py  main.py  note_const.py  schedule_task.py  utils.py
server/app/locales/: en.toml
server/app/logic/: content_filter.py  i18n.py
server/app/mails/: clip_content.jinja2  confirm_subscribe.jinja2
server/app/models/: base.py  datastore.py
server/app/resources/: __init__.py  base.py  note.py  redeem.py  socketio.py  websocket.py
server/app/views/: __init__.py  frontend.py  misc.py  view_api.py
server/migrations/versions/: 43d84101f808_.py  5bcdee6dfe86_.py  7f1a3e9b6d11_redeem.py  86ce6a126c32_.py  89e755497b8e_.py  a1f0499a631d_.py  c3026b515bcc_.py  fa81cd6921a4_.py
(+22 files in other folders)
