[tool.poetry]
name = "online-cb"
version = "0.0.11"
description = "Vuetify 3 + Flask based, in-place editable clipboard"
authors = ["LY <ly-niko@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
Werkzeug = "^3.0.1"
SQLAlchemy = "^2.0.23"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
gevent = "^23.9.1"
flask-restx = "^1.3.0"
flask-cors = "^4.0.0"
flask-jwt-extended = "^4.6.0"
python-dotenv = "^1.0.0"
passlib = "^1.7.4"
schedule = "^1.2.1"
flask-limiter = "^3.5.0"
flask-mailman = "^1.0.0"
jinja2 = "^3.1.3"


[tool.poetry.group.dev.dependencies]
cookiecutter = "^2.5.0"
deptry = "^0.12.0"
types-colorama = "*"
types-Flask-Cors = "*"
types-Flask-Migrate = "*"
types-gevent = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.deptry.per_rule_ignores]
DEP003 = ["alembic"]
